--- a/Desktop/Desktop/Pages/Create New Order.html
+++ b/Desktop/Desktop/Pages/Create New Order.html
@@ -182,7 +182,7 @@
         // this function is activated in case of a success
         function successGetstage1(stage1data) {
             for (var i = 0; i < stage1data.length; i++) {
-                $("#stage1").append($("<option></option>").val(stage1data[i].Description).html(stage1data[i].Description));
+                $("#stage1").append($("<option></option>").val(stage1data[i].ID).html(stage1data[i].Description));
 
             }
            
@@ -194,7 +194,7 @@
         }
         function successGetstage2(stage1data) {
             for (var i = 0; i < stage1data.length; i++) {
-                $("#stage2").append($("<option></option>").val(stage1data[i].Description).html(stage1data[i].Description));
+                $("#stage2").append($("<option></option>").val(stage1data[i].ID).html(stage1data[i].Description));
 
             }
 
@@ -205,7 +205,7 @@
         }
         function successGetstage3(stage1data) {
             for (var i = 0; i < stage1data.length; i++) {
-                $("#stage3").append($("<option></option>").val(stage1data[i].Description).html(stage1data[i].Description));
+                $("#stage3").append($("<option></option>").val(stage1data[i].ID).html(stage1data[i].Description));
 
             }
 
@@ -216,7 +216,7 @@
         }
         function successGetstage4(stage1data) {
             for (var i = 0; i < stage1data.length; i++) {
-                $("#stage4").append($("<option></option>").val(stage1data[i].Description).html(stage1data[i].Description));
+                $("#stage4").append($("<option></option>").val(stage1data[i].ID).html(stage1data[i].Description));
 
             }
 
@@ -227,7 +227,7 @@
         }
         function successGetstage5(stage1data) {
             for (var i = 0; i < stage1data.length; i++) {
-                $("#stage5").append($("<option></option>").val(stage1data[i].Description).html(stage1data[i].Description));
+                $("#stage5").append($("<option></option>").val(stage1data[i].ID).html(stage1data[i].Description));
 
             }
 
@@ -238,7 +238,7 @@
         }
         function successGetstage6(stage1data) {
             for (var i = 0; i < stage1data.length; i++) {
-                $("#stage6").append($("<option></option>").val(stage1data[i].Description).html(stage1data[i].Description));
+                $("#stage6").append($("<option></option>").val(stage1data[i].ID).html(stage1data[i].Description));
 
             }
 
@@ -249,7 +249,7 @@
         }
         function successGetstage7(stage1data) {
             for (var i = 0; i < stage1data.length; i++) {
-                $("#stage7").append($("<option></option>").val(stage1data[i].Description).html(stage1data[i].Description));
+                $("#stage7").append($("<option></option>").val(stage1data[i].ID).html(stage1data[i].Description));
 
             }
 
@@ -260,7 +260,7 @@
         }
         function successGetstage8(stage1data) {
             for (var i = 0; i < stage1data.length; i++) {
-                $("#stage8").append($("<option></option>").val(stage1data[i].Description).html(stage1data[i].Description));
+                $("#stage8").append($("<option></option>").val(stage1data[i].ID).html(stage1data[i].Description));
 
             }
 
@@ -271,7 +271,7 @@
         }
         function successGetstage9(stage1data) {
             for (var i = 0; i < stage1data.length; i++) {
-                $("#stage9").append($("<option></option>").val(stage1data[i].Description).html(stage1data[i].Description));
+                $("#stage9").append($("<option></option>").val(stage1data[i].ID).html(stage1data[i].Description));
 
             }
 
@@ -282,7 +282,7 @@
         }
         function successGetstage10(stage1data) {
             for (var i = 0; i < stage1data.length; i++) {
-                $("#stage10").append($("<option></option>").val(stage1data[i].Description).html(stage1data[i].Description));
+                $("#stage10").append($("<option></option>").val(stage1data[i].ID).html(stage1data[i].Description));
 
             }
 
