--- a/Desktop/Desktop/Pages/UserList.html
+++ b/Desktop/Desktop/Pages/UserList.html
@@ -23,6 +23,7 @@
             background-color: LightGray;
             border-style: solid;
             border-color: #92a8d1;
+            margin-top: 0px;
         }
 
         li {
@@ -38,7 +39,7 @@
             }
 
                 li a:hover {
-                    background-color: DodgerBlue;
+                    background-color: #5195A8;
                 }
 
         @import url('https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700');
@@ -350,9 +351,9 @@
 
 <body>
     <ul id="head">
-        <li><a class="active" href="OrderList.html">Order List</a></li>
+        <li><a  href="OrderList.html">Order List</a></li>
         <li><a href="CustomerList.html">Customer List</a></li>
-        <li><a href="UserList.html">User List</a></li>
+        <li><a class="active" href="UserList.html">User List</a></li>
         <li><a href="ItemList.html">Item List</a></li>
     </ul>
     <div class="container">
