--- a/Desktop/Desktop/Pages/OrderList.html
+++ b/Desktop/Desktop/Pages/OrderList.html
@@ -12,7 +12,30 @@
     <script src="../Scripts/ajaxCalls.js"></script>
     <style>
 
+        #head {
+            list-style-type: none;
+            overflow: hidden;
+            background-color: LightGray;
+            border-style: solid;
+            border-color: #92a8d1;
+            margin-top: 0px;
+        }
 
+        li {
+            float: left;
+        }
+
+            li a {
+                display: block;
+                color: black;
+                text-align: center;
+                padding: 14px 16px;
+                text-decoration: none;
+            }
+
+                li a:hover {
+                    background-color: #5195A8;
+                }
         @import url('https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700');
         table.dataTable tbody th, table.dataTable tbody td {
             padding: 6px 70px 0px 10px;
@@ -211,10 +234,15 @@
     </script>
 </head>
 <body>
+    <ul id="head">
+        <li><a class="active" href="OrderList.html">Order List</a></li>
+        <li><a href="CustomerList.html">Customer List</a></li>
+        <li><a href="UserList.html">User List</a></li>
+        <li><a href="ItemList.html">Item List</a></li>
+    </ul>
     <div class="container">
         <div class="title">
             <h2>Order List</h2>
-
         </div>
         <div class="d-flex">
             <form>
@@ -445,7 +473,6 @@
                             </td>
                             <td></td>
                         </tr>
-
                     </tbody>
                     <tfoot>
                         <tr>
@@ -461,8 +488,7 @@
             </form>
         </div><!-- Yorder -->
         <div class="fab" onclick="location.href='Create New Order.html'">+</div>
-      
-    </div>
 
+    </div>
 </body>
 </html>
