--- a/Desktop/Desktop/Pages/InsertItem.html
+++ b/Desktop/Desktop/Pages/InsertItem.html
@@ -227,11 +227,182 @@
         }
     </style>
     <script>
+        var tree = [];
+        var docids = []
+        var standardtree = [];
+        var db = firebase.firestore();
         $(document).ready(function () {
 
             ajaxCall("GET", "../api/AllItem", "", successGetstage, errorGetstage);
+            db.collection("tmp").orderBy('id', 'asc').get().then(function (querySnapshot) {
+                querySnapshot.forEach(function (doc) {
+                    docids.push(doc.id)
+                    tree.push(doc.data());
+                });
+
+                console.log(tree, tree.length)
+
+            });
+
+            db.collection("standard").orderBy('id', 'asc').get().then(function (querySnapshot) {
+                querySnapshot.forEach(function (doc) {
+
+                    standardtree.push(doc.data());
+                });
+
+                console.log(standardtree)
+
+            });
+
 
         });
+
+        function add() {
+            var tmp = [];
+            var choose = [];
+            for (var i = 1; i < 11; i++) {
+                tmp = [];
+                $.each($("input[name='stage" + i + "']:checked"), function () {
+                    tmp.push($(this).val());
+                });
+
+
+                if (i == 1) {
+                    choose.push({ id: i.toString(), parent: '', value: tmp });
+                }
+                else {
+
+                    choose.push({ id: i.toString(), parent: parent, value: tmp });
+                }
+
+                var parent = choose[i - 1].value
+
+            }
+
+
+            fusion(choose)
+
+        };
+
+        function fusion(choose) {
+            var addnew = false
+            var updateparent = false
+            var updatevalue = false
+            var valtoparent = []
+            var valtovalue = []
+            var emptytree = false
+            if (tree.length == 0) {
+                emptytree = true
+                console.log('emptytree')
+            }
+            for (var s = 1; s < 11; s++) {
+                addnew = false
+                updateparent = false
+                updatevalue = false
+                valtoparent = []
+                valtovalue = []
+                var treetmp = tree.filter(stage => stage.id == s)
+
+                var choosetmp = choose.filter(stage => stage.id == s)
+
+                if (choosetmp[0].value.length > 0) {
+                    if (emptytree) {
+                        addnew = true
+
+                    }
+                    for (var i = 0; i < treetmp.length; i++) {
+                        var value = new RegExp(treetmp[i].value)
+                        var parent = new RegExp(treetmp[i].parent)
+
+                        for (var v = 0; v < choosetmp[0].value.length; v++) {
+
+                            if (value.test(choosetmp[0].value[v])) {
+                                for (var p = 0; p < choosetmp[0].parent.length; p++) {
+                                    if (parent.test(choosetmp[0].parent[p])) {
+                                        break;
+                                    }
+                                    else {
+                                        updateparent = true;
+                                        valtoparent.push(choosetmp[0].parent[p])
+                                    }
+                                }
+                            }
+
+                            else if (!value.test(choosetmp[0].value[v])) {
+                                for (var p = 0; p < choosetmp[0].parent.length; p++) {
+                                    if (parent.test(choosetmp[0].parent[p])) {
+                                        updatevalue = true
+                                        valtovalue.push(choosetmp[0].value[v])
+                                    }
+                                    else {
+                                        addnew = true;
+
+                                    }
+                                }
+                            }
+
+                        }
+                    }
+
+                    if (addnew) {
+                        var valstr = ""
+                        var parstr = ''
+
+                        for (var a = 0; a < choosetmp[0].value.length; a++) {
+                            valstr += choosetmp[0].value[a] + '|'
+                        }
+                        choosetmp[0].value = valstr.substring(0, valstr.length - 1)
+
+                        for (var p = 0; p < choosetmp[0].parent.length; p++) {
+                            parstr += choosetmp[0].parent[p] + '|'
+                        }
+                        choosetmp[0].parent = parstr.substring(0, parstr.length - 1)
+
+                        tree.push(choosetmp[0])
+
+                        console.log('add new')
+                    }
+                    else if (updatevalue) {
+                        console.log(valtovalue)
+                        var str = ''
+                        var uniq = Array.from(new Set(valtovalue))
+                        for (var j = 0; j < uniq.length; j++) {
+                            str += '|' + uniq[j]
+
+                        }
+                        treetmp[0].value += str
+                        console.log('update value')
+                    }
+                    else if (updateparent) {
+                        var str = ""
+                        var uniq = Array.from(new Set(valtoparent))
+                        for (var j = 0; j < uniq.length; j++) {
+                            str += '|' + uniq[j]
+
+                        }
+
+                        treetmp[0].parent += str
+                        console.log('update parent')
+                    }
+                }
+
+
+            }
+            docids.map(id => { db.collection("tmp").doc(id).delete() })
+
+            tree.map((stage) => {
+                console.log(stage)
+                db.collection("tmp").add(stage)
+            })
+
+            setTimeout(function () {
+                alert('ok')
+                location.reload()
+            }, 3000);
+
+
+
+        }
         function successGetstage(data) {
             console.log(data);
             var result = Object.keys(data);
@@ -318,7 +489,7 @@
 
         </div><!-- Yorder -->
 
-        <div class="fab" onclick="location.href='Insert New Item.html'"> + </div>
+        <div class="fab" onclick=add()> + </div>
     </div>
 </body>
 </html>
