--- a/Desktop/Desktop/Pages/CustomerList.html
+++ b/Desktop/Desktop/Pages/CustomerList.html
@@ -301,7 +301,7 @@
         <li><a href="OrderList.html">Order List</a></li>
         <li><a class="active" href="CustomerList.html">Customer List</a></li>
         <li><a href="UserList.html">User List</a></li>
-        <li><a href="ItemList.html">Item List</a></li>
+        <li><a href="InsertItem.html">Item List</a></li>
     </ul>
     <div class="container">
         <div class="title">
