--- a/Desktop/Desktop/Pages/InsertItem.html
+++ b/Desktop/Desktop/Pages/InsertItem.html
@@ -31,7 +31,30 @@
     </script>
     <style>
 
+        #head {
+            list-style-type: none;
+            overflow: hidden;
+            background-color: LightGray;
+            border-style: solid;
+            border-color: #92a8d1;
+            margin-top: 0px;
+        }
 
+        li {
+            float: left;
+        }
+
+            li a {
+                display: block;
+                color: black;
+                text-align: center;
+                padding: 14px 16px;
+                text-decoration: none;
+            }
+
+                li a:hover {
+                    background-color: #5195A8;
+                }
 
         @import url('https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700');
 
@@ -421,6 +444,12 @@
     </script>
 </head>
 <body>
+    <ul id="head">
+        <li><a href="OrderList.html">Order List</a></li>
+        <li><a href="CustomerList.html">Customer List</a></li>
+        <li><a href="UserList.html">User List</a></li>
+        <li><a class="active" href="InsertItem.html">Item List</a></li>
+    </ul>
     <div class="container">
         <div class="title">
             <h2>Item List</h2>
@@ -441,41 +470,41 @@
                 <div class="item">Connector</div>
 
 
-                <div  id="stage1">
+                <div id="stage1">
 
                 </div>
-                <div  id="stage2">
-
-
-                </div>
-                <div  id="stage3">
-
-                </div>
-                <div  id="stage4">
+                <div id="stage2">
 
 
                 </div>
-                <div  id="stage5">
+                <div id="stage3">
+
+                </div>
+                <div id="stage4">
 
 
                 </div>
-                <div  id="stage6">
+                <div id="stage5">
 
 
                 </div>
-                <div  id="stage7">
+                <div id="stage6">
 
 
                 </div>
-                <div  id="stage8">
+                <div id="stage7">
 
 
                 </div>
-                <div  id="stage9">
+                <div id="stage8">
 
 
                 </div>
-                <div  id="stage10">
+                <div id="stage9">
+
+
+                </div>
+                <div id="stage10">
 
                 </div>
 
