--- a/Desktop/Desktop/Pages/OrderList.html
+++ b/Desktop/Desktop/Pages/OrderList.html
@@ -238,7 +238,7 @@
         <li><a class="active" href="OrderList.html">Order List</a></li>
         <li><a href="CustomerList.html">Customer List</a></li>
         <li><a href="UserList.html">User List</a></li>
-        <li><a href="ItemList.html">Item List</a></li>
+        <li><a href="InsertItem.html">Item List</a></li>
     </ul>
     <div class="container">
         <div class="title">
