--- a/Desktop/Desktop/Pages/Create New User.html
+++ b/Desktop/Desktop/Pages/Create New User.html
@@ -11,6 +11,31 @@
     <script src="../Scripts/ajaxCalls.js"></script>
     
     <style>
+        #head {
+            list-style-type: none;
+            overflow: hidden;
+            background-color: LightGray;
+            border-style: solid;
+            border-color: #92a8d1;
+            margin-top: 0px;
+        }
+
+        li {
+            float: left;
+        }
+
+            li a {
+                display: block;
+                color: black;
+                text-align: center;
+                padding: 14px 16px;
+                text-decoration: none;
+            }
+
+                li a:hover {
+                    background-color: #5195A8;
+                }
+
         @import url('https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700');
 
         body {
@@ -227,15 +252,18 @@
 
 </head>
 <body>
-
-
+    <ul id="head">
+        <li><a href="OrderList.html">Order List</a></li>
+        <li><a href="CustomerList.html">Customer List</a></li>
+        <li><a class="active" href="UserList.html">User List</a></li>
+        <li><a href="InsertItem.html">Item List</a></li>
+    </ul>
     <div class="container">
         <div class="title">
             <h2>Create New User</h2>
         </div>
         <div class="d-flex">
             <form action="" method="" id="Sform">
-
                 <label>
                     <span class="lname">First Name<span class="required">*</span></span>
                     <input type="text" name="lname" id="FirstName">
@@ -264,9 +292,9 @@
                     <span>Password<span class="required">*</span></span>
                     <input type="text" name="lname" id="Password">
                 </label>
-                <input type="submit" value="Create"/>
+                <input type="submit" value="Create" />
             </form>
-          
+
         </div>
     </div>
 </body>
