--- a/Desktop/Desktop/Pages/UserList.html
+++ b/Desktop/Desktop/Pages/UserList.html
@@ -354,7 +354,7 @@
         <li><a  href="OrderList.html">Order List</a></li>
         <li><a href="CustomerList.html">Customer List</a></li>
         <li><a class="active" href="UserList.html">User List</a></li>
-        <li><a href="ItemList.html">Item List</a></li>
+        <li><a href="InsertItem.html">Item List</a></li>
     </ul>
     <div class="container">
         <div class="title">
