--- a/Desktop/Desktop/Pages/Create New Order.html
+++ b/Desktop/Desktop/Pages/Create New Order.html
@@ -338,15 +338,15 @@
             err = JSON.parse(err.responseText);
             swal("Error!", err.ExceptionMessage, "error");
         }
-        function successIOC() {
-            swal("Added Successfuly!", "IOC created", "success")
-        }
+        //function successIOC() {
+        //    swal("Added Successfuly!", "IOC created", "success")
+        //}
 
-        // this function is activated in case of a failure
-        function errorIOC(err) {
-            err = JSON.parse(err.responseText);
-            swal("Error!", err.ExceptionMessage, "error");
-        }
+        //// this function is activated in case of a failure
+        //function errorIOC(err) {
+        //    err = JSON.parse(err.responseText);
+        //    swal("Error!", err.ExceptionMessage, "error");
+        //}
 
         function successItem() {
             swal("Added Successfuly!", "Item created", "success")
