--- a/Desktop/Desktop/Pages/UserList.html
+++ b/Desktop/Desktop/Pages/UserList.html
@@ -244,9 +244,9 @@
                 console.log('data-User')
                 update(Salse);
             });
-
+            //delete
             $(document).on("click", ".deletebtn", function () {
-                //tbl.row($(this).parents('tr')).remove().draw(false);
+              
                 markSelected(this);
                 var SalseUser = this.getAttribute('data-User');
                 swal({ // this will open a dialouge 
