--- a/Desktop/Desktop/Pages/InsertItem.html
+++ b/Desktop/Desktop/Pages/InsertItem.html
@@ -232,8 +232,8 @@
 
         .wrapper {
             display: grid;
-            grid-template-columns: 10% 10% 10% 10% 10% 10% 10% 10% 10% 10%;
-            grid-template-rows: 5%;
+            grid-template-columns: 9% 9% 9% 9% 9% 9% 9% 9% 9% 9%;
+            grid-template-rows: 2%;
             grid-gap: 10px;
             grid-row: 1;
         }
@@ -243,6 +243,7 @@
         }
     </style>
     <script>
+        //tree= data from FireBase
         var tree = [];
         var docids = []
         var standardtree = [];
@@ -274,12 +275,15 @@
         });
 
         function add() {
+            //tmp=A value selected at each stage
+            //choose= Which stage you are
             var tmp = [];
             var choose = [];
             for (var i = 1; i < 11; i++) {
                 tmp = [];
                 $.each($("input[name='stage" + i + "']:checked"), function () {
                     tmp.push($(this).val());
+                   
                 });
 
 
@@ -290,7 +294,7 @@
 
                     choose.push({ id: i.toString(), parent: parent, value: tmp });
                 }
-
+                // Prepare Dad for the next stage
                 var parent = choose[i - 1].value
 
             }
@@ -301,6 +305,12 @@
         };
 
         function fusion(choose) {
+            //addnew=need new leaf?
+            //updateparent=need update?
+            //updatevalue=new value for child?
+            //valtoparent= add new parent
+            //valtovalue=add new child value
+
             var addnew = false
             var updateparent = false
             var updatevalue = false
@@ -311,6 +321,8 @@
                 emptytree = true
                 console.log('emptytree')
             }
+            //Go through the stages
+            //treetmp
             for (var s = 1; s < 11; s++) {
                 addnew = false
                 updateparent = false
@@ -318,7 +330,6 @@
                 valtoparent = []
                 valtovalue = []
                 var treetmp = tree.filter(stage => stage.id == s)
-
                 var choosetmp = choose.filter(stage => stage.id == s)
 
                 if (choosetmp[0].value.length > 0) {
@@ -343,7 +354,9 @@
                                     }
                                 }
                             }
-
+                            //value not exist but dad exist
+                            //update new value
+                            //addnew= value and dad not exis=>create new leaf
                             else if (!value.test(choosetmp[0].value[v])) {
                                 for (var p = 0; p < choosetmp[0].parent.length; p++) {
                                     if (parent.test(choosetmp[0].parent[p])) {
@@ -359,7 +372,11 @@
 
                         }
                     }
-
+                    //how yo create the new leaf
+                    //1. create new string for values and dad
+                    //2. add values to valstr in a shape of Regax
+                    //3. same to dad
+                    //4.update the tree from FireBase
                     if (addnew) {
                         var valstr = ""
                         var parstr = ''
@@ -378,6 +395,9 @@
 
                         console.log('add new')
                     }
+
+                    //In case of update child only
+                    //uniq= Delete duplicate values
                     else if (updatevalue) {
                         console.log(valtovalue)
                         var str = ''
@@ -404,6 +424,7 @@
 
 
             }
+            //delete old tree by id,add the new one and refresh the page
             docids.map(id => { db.collection("tmp").doc(id).delete() })
 
             tree.map((stage) => {
