--- a/Desktop/Desktop/Pages/InsertItem.html
+++ b/Desktop/Desktop/Pages/InsertItem.html
@@ -474,9 +474,16 @@
     </ul>
     <div class="container">
         <div class="title">
-            <h2>Item List</h2>
+            <h2>Insert Standard/InValid</h2>
 
         </div>
+        //invalid/standard
+        //catagory
+        //stage
+        //value
+        <select> <option value="invalid">InValid</option><option value="standard">Standard</option></select>
+        <select ></select>
+        <select></select>
         <div class="d-flex">
 
             <div class="wrapper">
